--- a/build.gradle
+++ b/build.gradle
@@ -49,21 +49,6 @@ project(':netty3D') {
 	}
 }
 
-project(':slf4jD') {
-	apply plugin: "java"
-
-	dependencies {
-		compile (
-				"org.slf4j:slf4j-api:1.7.1",
-				"org.apache.logging.log4j:log4j-api:2.2",
-				"org.apache.logging.log4j:log4j-core:2.2",
-				"org.apache.logging.log4j:log4j-slf4j-impl:2.2",
-				"org.apache.logging.log4j:log4j-jcl:2.2"
-		)
-	}
-}
-
-
 
 project(':mybatisD') {
 	apply plugin: "java"
@@ -87,7 +72,10 @@ project(':rbatis') {
 	dependencies {
 		compile(
 				"org.apache.httpcomponents:httpclient:4.3.6",
-				"org.glassfish.jersey.containers:jersey-bom:2.16",
+
+
+				"org.glassfish.jersey.containers:jersey-container-grizzly2-servlet:2.16",
+
 				"org.glassfish.jersey.media:jersey-media-moxy:2.16",
 
 				"org.slf4j:slf4j-api:1.7.1",
@@ -95,6 +83,28 @@ project(':rbatis') {
 				"org.apache.logging.log4j:log4j-core:2.2",
 				"org.apache.logging.log4j:log4j-slf4j-impl:2.2",
 				"org.apache.logging.log4j:log4j-jcl:2.2"
+		)
+	}
+}
+
+
+project(':dubboD') {
+	dependencies {
+		compile(
+
+
+				"com.alibaba:dubbo:2.8.4",
+				"org.jboss.resteasy:resteasy-jaxrs:3.0.7.Final",
+				"org.jboss.resteasy:resteasy-client:3.0.7.Final",
+				"org.apache.tomcat.embed:tomcat-embed-core:8.0.11",
+				"org.apache.tomcat.embed:tomcat-embed-logging-juli:8.0.11",
+				"javax.validation:validation-api:1.0.0.GA",
+				"org.slf4j:slf4j-api:1.7.1",
+				"org.apache.logging.log4j:log4j-api:2.2",
+				"org.apache.logging.log4j:log4j-core:2.2",
+				"org.apache.logging.log4j:log4j-slf4j-impl:2.2",
+				"org.apache.logging.log4j:log4j-jcl:2.2",
+				"org.jboss.resteasy:resteasy-jackson-provider:3.0.7.Final"
 		)
 	}
 }
