--- a/build.gradle
+++ b/build.gradle
@@ -108,3 +108,22 @@ project(':dubboD') {
 		)
 	}
 }
+
+project(':jerseyD') {
+	dependencies {
+		compile(
+
+
+
+				"org.glassfish.jersey.containers:jersey-container-grizzly2-servlet:2.16",
+
+				"org.glassfish.jersey.media:jersey-media-moxy:2.16",
+
+				"org.slf4j:slf4j-api:1.7.1",
+				"org.apache.logging.log4j:log4j-api:2.2",
+				"org.apache.logging.log4j:log4j-core:2.2",
+				"org.apache.logging.log4j:log4j-slf4j-impl:2.2",
+				"org.apache.logging.log4j:log4j-jcl:2.2"
+		)
+	}
+}
