--- a/build.gradle
+++ b/build.gradle
@@ -62,7 +62,8 @@ project(':mybatisD') {
 				"org.springframework:spring-tx:4.2.5.RELEASE",
 				"org.springframework:spring-jdbc:4.2.5.RELEASE",
 				"org.mybatis:mybatis-spring:1.3.0",
-				"commons-dbcp:commons-dbcp:1.4"
+				"commons-dbcp:commons-dbcp:1.4",
+				"log4j:log4j:1.2.17"
 		)
 	}
 }
@@ -70,13 +71,24 @@ project(':mybatisD') {
 project(':rbatis') {
 	dependencies {
 		compile(
-				"org.apache.httpcomponents:httpclient:4.3.6",
+				"org.apache.httpcomponents:httpclient:4.5.2",
+				'org.apache.httpcomponents:httpmime:4.5.2',
+				'org.apache.httpcomponents:httpasyncclient:4.1.2',
 
 				"org.slf4j:slf4j-api:1.7.1",
 				"org.apache.logging.log4j:log4j-api:2.2",
 				"org.apache.logging.log4j:log4j-core:2.2",
 				"org.apache.logging.log4j:log4j-slf4j-impl:2.2",
-				"org.apache.logging.log4j:log4j-jcl:2.2"
+				"org.apache.logging.log4j:log4j-jcl:2.2",
+
+				/*"log4j:log4j:1.2.17",*/
+
+				"com.fasterxml.jackson.core:jackson-core:2.8.5",
+				"com.fasterxml.jackson.core:jackson-databind:2.8.5",
+
+				"javax.ws.rs:javax.ws.rs-api:2.0.1"
+
+
 		)
 	}
 }
@@ -113,11 +125,17 @@ project(':jerseyD') {
 
 				"org.glassfish.jersey.media:jersey-media-moxy:2.16",
 
+				"org.glassfish.jersey.media:jersey-media-multipart:2.16",
+
+				"commons-io:commons-io:2.5",
+
 				"org.slf4j:slf4j-api:1.7.1",
 				"org.apache.logging.log4j:log4j-api:2.2",
 				"org.apache.logging.log4j:log4j-core:2.2",
 				"org.apache.logging.log4j:log4j-slf4j-impl:2.2",
 				"org.apache.logging.log4j:log4j-jcl:2.2"
+
+
 		)
 	}
 }
