--- a/build.gradle
+++ b/build.gradle
@@ -99,7 +99,7 @@ project(':dubboD') {
 		compile(
 
 
-				"com.alibaba:dubbo:2.8.4",
+				"com.alibaba:dubbo:2.5.6",
 				"org.jboss.resteasy:resteasy-jaxrs:3.0.7.Final",
 				"org.jboss.resteasy:resteasy-client:3.0.7.Final",
 				"org.apache.tomcat.embed:tomcat-embed-core:8.0.11",
@@ -110,7 +110,9 @@ project(':dubboD') {
 				"org.apache.logging.log4j:log4j-core:2.2",
 				"org.apache.logging.log4j:log4j-slf4j-impl:2.2",
 				"org.apache.logging.log4j:log4j-jcl:2.2",
-				"org.jboss.resteasy:resteasy-jackson-provider:3.0.7.Final"
+				"org.jboss.resteasy:resteasy-jackson-provider:3.0.7.Final",
+
+				"com.github.sgroschupf:zkclient:0.1"
 		)
 	}
 }
