--- a/build.gradle
+++ b/build.gradle
@@ -27,9 +27,9 @@ project(':core') {
 				"org.springframework:spring-core:4.2.5.RELEASE",
 				"org.springframework:spring-context-support:4.2.5.RELEASE",
 				"org.springframework:spring-tx:4.2.5.RELEASE",
-				"org.springframework:spring-jdbc:4.2.5.RELEASE"
+				"org.springframework:spring-jdbc:4.2.5.RELEASE",
+				"com.google.guava:guava:18.0"
 		)
-
 	}
 }
 
@@ -160,4 +160,26 @@ project(':motanD') {
 		)
 	}
 	
+}
+
+
+project(':zkD') {
+	dependencies {
+		compile(
+				"com.github.sgroschupf:zkclient:0.1"
+		)
+	}
+}
+
+project(':kafkaD') {
+	dependencies {
+		compile(
+				"org.apache.kafka:kafka-clients:0.10.1.0",
+				"org.slf4j:slf4j-api:1.7.1",
+				"org.apache.logging.log4j:log4j-api:2.2",
+				"org.apache.logging.log4j:log4j-core:2.2",
+				"org.apache.logging.log4j:log4j-slf4j-impl:2.2",
+				"org.apache.logging.log4j:log4j-jcl:2.2"
+		)
+	}
 }
